--- a/src/App.css
+++ b/src/App.css
@@ -24,6 +24,12 @@
   color: white;
 }
 
+.validate{
+  color: rgb(146, 40, 7);
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-weight: 400;
+}
+
 .App-link {
   color: #61dafb;
 }
