--- a/src/App.css
+++ b/src/App.css
@@ -24,10 +24,14 @@
   color: white;
 }
 
-.validate{
+.validate {
   color: rgb(146, 40, 7);
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   font-weight: 400;
+}
+
+.stepper:hover {
+  cursor: pointer;
 }
 
 .App-link {
@@ -38,6 +42,7 @@
   from {
     transform: rotate(0deg);
   }
+
   to {
     transform: rotate(360deg);
   }
